--- a/css/bio.css
+++ b/css/bio.css
@@ -225,6 +225,7 @@ ul {
 	font-family:'Regular';
 	font-size: 18px;
 	margin-bottom: 5vh;
+	list-style: none;
 }
 
 li {
@@ -721,7 +722,13 @@ video {
 	margin-top: 5rem;
 	text-align: center;
 	
-}
+	max-width: 100%;
+
+	}
+
+
+
+
 
 .skills__title{
 	margin: 2rem;
@@ -731,13 +738,23 @@ video {
 .skills__line{
 	display: flex;
 	justify-content: center;
+	
 }
+
+@media screen and (max-width: 767px) {
+	.skills__line {	
+		flex-wrap: wrap;
+		
+	}
 
 .skills__box{
 	align-items: center;
-	padding: 3%;
+	justify-content: space-around;
+	
 }
-
+::marker{
+	unicode-bidi:isolate;
+}
 .skills__img{
 size: 0.1rem;
 
